<resources>
    <string name="app_name">QuizzApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="nameDesc">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">START</string>
    <string name="submitBtn">Submit</string>
    <string name="contentDesc">flag of country</string>
    <string name="result">Result</string>
    <string name="trophy_image">Trophy image</string>
    <string name="congratulations">Congratulations!</string>
    <string name="finish">Finish</string>
</resources>